Made some changes to the CSS for for rendering product options fixed the layout for milk, strength flavour spacing and positioning looks good, I did try to attempt to have a useState on a radio button to uncheck it but currently doesn't work.

--- a/src/styles/Orderfoodhomepagecss/Statusbar.module.css
+++ b/src/styles/Orderfoodhomepagecss/Statusbar.module.css
@@ -1,9 +1,8 @@
-.statusBar {
+/* .statusBar {
       display: flex;
       justify-content: space-between;
       align-items: center;
       height: 45px;
-      /* margin: 0 auto; */
       background-color: white;
       font-size: 14px;
       font-weight: bold;
@@ -14,7 +13,6 @@
       margin-left: 40px;
 }
 
-/* Icons */
 .icons img {
       width: 170px;
       height: 50px;
@@ -26,4 +24,4 @@
       margin-bottom: 40px;
       font-weight: bold;
       text-align: center;
-}
+} */
